# brain

./: .gitignore  DESIGN.md  LICENSE  README.md  plan.md  pyproject.toml
docs/: ARCHITECTURE.md  patch-notes-2026-04-19.md
hermes/: __init__.py  __main__.py  _app_factory.py  app.py  auth.py  cli.py  config.py  cross_session_context.py  embedding.py  eviction.py  exporter.py  ingest.py  integrate.py  llm_contradiction.py  notifier.py  project_key.py  proposals.py  reflect.py  remote_dedup.py  repository.py  runtime.py  selflearn.py  status.py  templates.py  weight.py
scripts/: brain-sync  dedup_app.py  dedup_standalone.py  find_dupes.py  project_claude_md.py  proposal_monitor.py  requirements.txt
tests/: test_app.py  test_cli.py  test_production.py  test_project_key.py  test_proposals.py  test_runtime.py  test_store_and_exports.py
